# Snake

./: README.md  main.py  pyproject.toml  settings.py  test_main.py
scripts/: main.py  main_with_vision.py
snake-app/: distance.py  food.py  grid.py  snake.py  vision.py
snake_app/: cartesian.py  food.py  grid.py  snake.py  vision.py
