[tool.poetry]
name = "snake_app"
version = "0.1.0"
description = "Python implementation of the game snake using pygame."
authors = ["RJW20"]
license = "MIT"
readme = "README.md"
packages = [{include = "snake_app"}]

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"

[tool.poetry.scripts]
main = "scripts.main:main"
main_with_vision = "scripts.main_with_vision:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
